--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_sign_up_sign_up_page.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_sign_up_sign_up_page.xml
@@ -10,21 +10,22 @@
         android:id="@+id/signUpSignUpAccountActivitySurnameText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
         android:layout_marginEnd="66dp"
         android:ems="10"
         android:hint="Surname"
         android:inputType="textPersonName"
+        app:layout_constraintBaseline_toBaselineOf="@+id/signUpSignUpActivityNameText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/signUpSignUpActivityNameText"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toEndOf="@+id/signUpSignUpActivityNameText" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
-        android:text="Manage Account"
+        android:layout_marginBottom="14dp"
+        android:text="Sign Up"
+        app:layout_constraintBottom_toTopOf="@+id/signUpSignUpActivityNameText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,23 +36,26 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="59dp"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="19dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/signUpSignUpAccountActivitySurnameText"
+        app:layout_constraintBottom_toTopOf="@+id/signUpSignUpAccountActivityEmailText"
         app:layout_constraintEnd_toStartOf="@+id/signUpSignUpAccountActivitySurnameText"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
         android:id="@+id/signUpSignUpAccountActivityEmailText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="59dp"
-        android:layout_marginTop="22dp"
         android:layout_marginEnd="59dp"
+        android:layout_marginBottom="10dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/managerAccountActivityRadioGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpSignUpActivityNameText" />
@@ -75,52 +79,55 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="30dp"
         android:layout_marginEnd="56dp"
+        android:layout_marginBottom="19dp"
         android:ems="10"
         android:hint="SSN"
-        android:inputType="textPersonName"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/signUpSignUpAccountActivityPasswordText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpSignUpAccountActivityDateOfBirthText" />
+        app:layout_constraintTop_toBottomOf="@+id/managerAccountActivityRadioGroup" />
 
     <EditText
-        android:id="@+id/manageAccountActivityPasswordText"
+        android:id="@+id/signUpSignUpAccountActivityPasswordText"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="25dp"
         android:layout_marginEnd="56dp"
+        android:layout_marginBottom="7dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/signUpSignUpActivityAcceptTermsRadioButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpSignUpAccountActivitySSNText" />
 
     <Button
         android:id="@+id/manageAccountActivitySaveChangesButton"
-        android:layout_width="170dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="49dp"
-        android:onClick="saveChanges"
-        android:text="Save Changes"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:onClick="signUpSignUp"
+        android:text="Sign Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUpSignUpActivityAcceptTermsRadioButton" />
 
     <RadioGroup
         android:id="@+id/managerAccountActivityRadioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="60dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/signUpSignUpAccountActivitySSNText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/signUpSignUpAccountActivityDateOfBirthText"
         app:layout_constraintTop_toBottomOf="@+id/signUpSignUpAccountActivityEmailText">
 
         <RadioButton
-            android:id="@+id/managerAccountActivityFemaleRadioButton"
+            android:id="@+id/signUpSignUpAccountActivityFemaleRadioButton"
             android:layout_width="117dp"
             android:layout_height="31dp"
             android:text="Female"
@@ -128,13 +135,26 @@
             tools:layout_editor_absoluteY="226dp" />
 
         <RadioButton
-            android:id="@+id/managerAccountActivityMaleRadioButton"
+            android:id="@+id/signUpSignUpAccountActivityMaleRadioButton"
             android:layout_width="117dp"
             android:layout_height="37dp"
             android:text="Male"
             tools:layout_editor_absoluteX="59dp"
             tools:layout_editor_absoluteY="231dp" />
     </RadioGroup>
+
+    <RadioButton
+        android:id="@+id/signUpSignUpActivityAcceptTermsRadioButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginEnd="58dp"
+        android:layout_marginBottom="17dp"
+        android:text="I Agree Terms and Conditions"
+        app:layout_constraintBottom_toTopOf="@+id/manageAccountActivitySaveChangesButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUpSignUpAccountActivityPasswordText" />
 
 
 </android.support.constraint.ConstraintLayout>
