--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_sign_up.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_sign_up.xml
@@ -63,4 +63,14 @@
         app:layout_constraintEnd_toEndOf="@+id/signUpActivitySignUpButton"
         app:layout_constraintStart_toStartOf="@+id/signUpActivitySignUpButton" />
 
+    <CheckBox
+        android:id="@+id/signUpActivityAutoLoginCheckBox"
+        android:layout_width="124dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:checked="false"
+        android:text="Remember Me"
+        app:layout_constraintEnd_toEndOf="@+id/signupActivityPasswordText"
+        app:layout_constraintTop_toBottomOf="@+id/signupActivityPasswordText" />
+
 </android.support.constraint.ConstraintLayout>
