--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_manage_account.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_manage_account.xml
@@ -7,17 +7,16 @@
     tools:layout_editor_absoluteY="81dp">
 
     <EditText
-        android:id="@+id/signUpSignUpAccountActivitySurnameText"
+        android:id="@+id/signUpSignUpActivityActivitySurnameText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="66dp"
-        android:layout_marginBottom="21dp"
         android:ems="10"
         android:hint="Surname"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/signUpSignUpAccountActivityEmailText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/signUpSignUpActivityNameText"
+        app:layout_constraintStart_toEndOf="@+id/ManageAccountActivityNameText"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
@@ -25,15 +24,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
-        android:layout_marginBottom="14dp"
         android:text="Manage Account"
-        app:layout_constraintBottom_toTopOf="@+id/signUpSignUpAccountActivitySurnameText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/signUpSignUpActivityNameText"
+        android:id="@+id/ManageAccountActivityNameText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="59dp"
@@ -41,27 +38,26 @@
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/signUpSignUpAccountActivitySurnameText"
-        app:layout_constraintEnd_toStartOf="@+id/signUpSignUpAccountActivitySurnameText"
+        app:layout_constraintBaseline_toBaselineOf="@+id/signUpSignUpActivityActivitySurnameText"
+        app:layout_constraintEnd_toStartOf="@+id/signUpSignUpActivityActivitySurnameText"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/signUpSignUpAccountActivityEmailText"
+        android:id="@+id/ManageAccountActivityEmailText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="59dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="59dp"
-        android:layout_marginBottom="10dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/managerAccountActivityRadioGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpSignUpAccountActivitySurnameText" />
+        app:layout_constraintTop_toBottomOf="@+id/ManageAccountActivityNameText" />
 
     <EditText
-        android:id="@+id/signUpSignUpAccountActivityDateOfBirthText"
+        android:id="@+id/ManageAccountActivityDateOfBirth"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="59dp"
@@ -69,65 +65,63 @@
         android:ems="10"
         android:hint="Date Of Bith"
         android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="@+id/managerAccountActivityRadioGroup"
-        app:layout_constraintEnd_toStartOf="@+id/managerAccountActivityRadioGroup"
+        app:layout_constraintBottom_toBottomOf="@+id/ManageAccountActivityRadioGroup"
+        app:layout_constraintEnd_toStartOf="@+id/ManageAccountActivityRadioGroup"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/managerAccountActivityRadioGroup" />
+        app:layout_constraintTop_toTopOf="@+id/ManageAccountActivityRadioGroup" />
 
     <EditText
-        android:id="@+id/signUpSignUpAccountActivitySSNText"
+        android:id="@+id/ManageAccountActivitySSNText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="56dp"
-        android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="SSN"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/manageAccountActivityPasswordText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/managerAccountActivityRadioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/ManageAccountActivityDateOfBirth" />
 
     <EditText
-        android:id="@+id/manageAccountActivityPasswordText"
+        android:id="@+id/ManageAccountActivityPasswordText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
+        android:layout_marginTop="23dp"
         android:layout_marginEnd="56dp"
-        android:layout_marginBottom="37dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/activityManageAccountFreezeSwitch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpSignUpAccountActivitySSNText" />
+        app:layout_constraintTop_toBottomOf="@+id/ManageAccountActivitySSNText" />
 
     <Button
-        android:id="@+id/manageAccountActivitySaveChangesButton"
+        android:id="@+id/ManageAccountActivitySaveChangesButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="55dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="1dp"
         android:onClick="saveChanges"
         android:text="Save Changes"
-        app:layout_constraintBottom_toBottomOf="@+id/activityManageAccountFreezeSwitch"
+        app:layout_constraintBottom_toBottomOf="@+id/ManageAccountactivityFreezeSwitch"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/activityManageAccountFreezeSwitch" />
+        app:layout_constraintStart_toEndOf="@+id/ManageAccountactivityFreezeSwitch" />
 
     <RadioGroup
-        android:id="@+id/managerAccountActivityRadioGroup"
+        android:id="@+id/ManageAccountActivityRadioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/signUpSignUpAccountActivitySSNText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/signUpSignUpAccountActivityDateOfBirthText"
-        app:layout_constraintTop_toBottomOf="@+id/signUpSignUpAccountActivityEmailText">
+        app:layout_constraintStart_toEndOf="@+id/ManageAccountActivityDateOfBirth"
+        app:layout_constraintTop_toBottomOf="@+id/ManageAccountActivityEmailText">
 
         <RadioButton
-            android:id="@+id/managerAccountActivityFemaleRadioButton"
+            android:id="@+id/ManageAccountActivityFemailRadioButton"
             android:layout_width="117dp"
             android:layout_height="31dp"
             android:text="Female"
@@ -135,7 +129,7 @@
             tools:layout_editor_absoluteY="226dp" />
 
         <RadioButton
-            android:id="@+id/managerAccountActivityMaleRadioButton"
+            android:id="@+id/ManageAccountActivityMaleRadioButton"
             android:layout_width="117dp"
             android:layout_height="37dp"
             android:text="Male"
@@ -144,17 +138,16 @@
     </RadioGroup>
 
     <Switch
-        android:id="@+id/activityManageAccountFreezeSwitch"
+        android:id="@+id/ManageAccountactivityFreezeSwitch"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="48dp"
         android:layout_marginStart="56dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="51dp"
         android:text="Freeze Account"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/manageAccountActivitySaveChangesButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/manageAccountActivityPasswordText" />
+        app:layout_constraintEnd_toStartOf="@+id/ManageAccountActivitySaveChangesButton"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
