--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_add_trip.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_add_trip.xml
@@ -6,21 +6,6 @@
     android:layout_height="match_parent"
     tools:layout_editor_absoluteY="81dp">
 
-    <EditText
-        android:id="@+id/addTripActivityDateTimeText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="154dp"
-        android:ems="10"
-        android:hint="Date Time(Ex:17/06/2018 13:30)"
-        android:inputType="datetime"
-        app:layout_constraintBottom_toTopOf="@+id/addTripActivityAddTripButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addTripActivityWhereSpinner" />
-
     <Button
         android:id="@+id/addTripActivityAddTripButton"
         android:layout_width="0dp"
@@ -33,15 +18,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addTripActivityDateTimeText" />
+        app:layout_constraintTop_toBottomOf="@+id/addTripActivityDateButton" />
 
     <Spinner
         android:id="@+id/addTripActivityFromSpinner"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="21dp"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,10 +33,8 @@
         android:id="@+id/addTripActivityWhereSpinner"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="47dp"
-        app:layout_constraintBottom_toTopOf="@+id/addTripActivityDateTimeText"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/addTripActivityTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -63,8 +43,7 @@
         android:id="@+id/textView7"
         android:layout_width="150dp"
         android:layout_height="0dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="3dp"
         android:text="From"
         app:layout_constraintBottom_toTopOf="@+id/addTripActivityFromSpinner"
         app:layout_constraintStart_toStartOf="@+id/addTripActivityFromSpinner"
@@ -72,15 +51,35 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="108dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="6dp"
         android:text="Destination"
         app:layout_constraintBottom_toTopOf="@+id/addTripActivityWhereSpinner"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
+        app:layout_constraintEnd_toStartOf="@+id/addTripActivityTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addTripActivityFromSpinner" />
+
+    <Button
+        android:id="@+id/addTripActivityDateButton"
+        android:layout_width="144dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginBottom="72dp"
+        android:onClick="goCalender"
+        android:text="Select Departure Date"
+        app:layout_constraintBottom_toTopOf="@+id/addTripActivityAddTripButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addTripActivityTextView" />
+
+    <TextView
+        android:id="@+id/addTripActivityTextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="43dp"
+        android:text="Date Time"
+        app:layout_constraintBottom_toTopOf="@+id/addTripActivityDateButton"
+        app:layout_constraintEnd_toEndOf="@+id/addTripActivityDateButton"
+        app:layout_constraintStart_toStartOf="@+id/addTripActivityDateButton"
+        app:layout_constraintTop_toBottomOf="@+id/addTripActivityWhereSpinner" />
 
 </android.support.constraint.ConstraintLayout>
