Delete Trip Added(Db Change deleted Added)

--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_edit_bus_schedule.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_edit_bus_schedule.xml
@@ -16,7 +16,8 @@
         android:text="Add Trip"
         app:layout_constraintBottom_toTopOf="@+id/editBusActivityUpdateTripButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread_inside" />
 
     <Button
         android:id="@+id/editBusActivityUpdateTripButton"
@@ -37,6 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginBottom="181dp"
+        android:onClick="deleteTrip"
         android:text="Delete Trip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/editBusActivityUpdateTripButton"
