--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_edit_bus_schedule.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_edit_bus_schedule.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="47dp"
         android:layout_marginEnd="47dp"
         android:layout_marginBottom="24dp"
+        android:onClick="updateTrip"
         android:text="Update Trip"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
