--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_list_trips_for_admin.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_list_trips_for_admin.xml
@@ -7,20 +7,20 @@
     tools:layout_editor_absoluteY="81dp">
 
     <ListView
-        android:id="@+id/listViewAdmin"
+        android:id="@+id/listViewAdminUpdateTrip"
         android:layout_width="0dp"
         android:layout_height="369dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="41dp"
-        app:layout_constraintBottom_toTopOf="@+id/activityListTripsForAdminDeleteTripButton"
+        app:layout_constraintBottom_toTopOf="@+id/activityListTripsForAdminUpdateTripButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/activityListTripsForAdminDeleteTripButton"
+        android:id="@+id/activityListTripsForAdminUpdateTripButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
@@ -29,11 +29,11 @@
         android:text="Delete Trip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/activityListTripForAdminObjectIdText"
-        app:layout_constraintTop_toBottomOf="@+id/listViewAdmin" />
+        app:layout_constraintStart_toEndOf="@+id/activityListTripForAdminObjectIdTextUpdateTrip"
+        app:layout_constraintTop_toBottomOf="@+id/listViewAdminUpdateTrip" />
 
     <EditText
-        android:id="@+id/activityListTripForAdminObjectIdText"
+        android:id="@+id/activityListTripForAdminObjectIdTextUpdateTrip"
         android:layout_width="0dp"
         android:layout_height="49dp"
         android:layout_marginStart="16dp"
@@ -44,7 +44,7 @@
         android:hint="Write Object Id"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/activityListTripsForAdminDeleteTripButton"
+        app:layout_constraintEnd_toStartOf="@+id/activityListTripsForAdminUpdateTripButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listViewAdmin" />
+        app:layout_constraintTop_toBottomOf="@+id/listViewAdminUpdateTrip" />
 </android.support.constraint.ConstraintLayout>
