--- a/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_add_booking.xml
+++ b/Project_Android_Trustbus/TrustBusSe301Project/app/src/main/res/layout/activity_add_booking.xml
@@ -27,48 +27,47 @@
         app:layout_constraintBottom_toTopOf="@+id/textView12"
         app:layout_constraintEnd_toEndOf="@+id/textView12"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityUsername"
-        app:layout_constraintVertical_chainStyle="spread_inside" />
+        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityUsername" />
 
     <Spinner
         android:id="@+id/addBookingActivityFromSpinner"
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="45dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView12"
+        android:layout_marginBottom="89dp"
+        app:layout_constraintBottom_toBottomOf="@+id/addBookingActivityDestinationSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView11" />
+        app:layout_constraintTop_toTopOf="@+id/addBookingActivityUsername" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="105dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="110dp"
         android:text="Destination"
-        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityDestinationSpinner"
+        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityDateButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <Spinner
         android:id="@+id/addBookingActivityDestinationSpinner"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="44dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="67dp"
-        app:layout_constraintBottom_toTopOf="@+id/addBookingActivityDateButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/addBookingActivityTextView"
         android:layout_width="82dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="67dp"
+        android:layout_marginBottom="66dp"
         android:text="Date/ Time"
         app:layout_constraintBottom_toTopOf="@+id/addBookingActivityAddBookingSpinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +84,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addBookingActivityDestinationSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <Button
         android:id="@+id/addBookingActivityAddBookingSpinner"
